# levshell

./: .gitignore  Cargo.toml  LICENSE  README.md  test.md
config/: levshell.toml
config/hosts/: example.toml
config/profiles/: lit-review.toml  writing.toml
config/projects/: example.toml
config/themes/: neutral-dark.toml  neutral-light.toml  warm-dark.toml  warm-light.toml
crates/levshell-config/: Cargo.toml
crates/levshell-config/src/: lib.rs  profiles.rs  settings.rs  themes.rs  watcher.rs
crates/levshell-context/: Cargo.toml
crates/levshell-context/src/: cascade.rs  error.rs  expr.rs  hysteresis.rs  lib.rs  rules.rs  signals.rs
crates/levshell-core/: Cargo.toml
crates/levshell-core/src/: bus.rs  lib.rs  module.rs  runner.rs
crates/levshell-core/tests/: event_bus.rs  module_runner.rs
crates/levshell-ctl/: Cargo.toml
crates/levshell-ctl/src/: main.rs
crates/levshell-daemon/: Cargo.toml
crates/levshell-daemon/src/: lib.rs  main.rs
crates/levshell-daemon/tests/: end_to_end.rs
crates/levshell-data/: Cargo.toml
crates/levshell-data/migrations/: 001_initial.sql
crates/levshell-data/src/: error.rs  lib.rs  models.rs  store.rs
crates/levshell-data/src/ops/: events.rs  experiments.rs  export.rs  flashcards.rs  graph.rs  mod.rs  notes.rs  projects.rs  refs.rs  relations.rs  scaffold.rs  search.rs  sync_metadata.rs  tags.rs  tasks.rs
crates/levshell-data/tests/: data_store.rs
crates/levshell-ipc/: Cargo.toml
crates/levshell-ipc/src/: codec.rs  error.rs  framing.rs  handshake.rs  lib.rs  messages.rs  publisher.rs  server.rs
crates/levshell-ipc/tests/: ipc.rs  publisher.rs
crates/levshell-modules/: Cargo.toml
crates/levshell-modules/src/: anki_due.rs  anki_review.rs  arxiv_watch.rs  context_engine.rs  escalation.rs  latex_status.rs  lib.rs  notifications.rs  project_pulse.rs  reference_library.rs  session_timer.rs  theme.rs
crates/levshell-modules/src/clock/: mod.rs
crates/levshell-modules/src/context_snapshot/: capture.rs  mod.rs  model.rs  restore.rs
crates/levshell-modules/src/focus/: mod.rs  tracker.rs
crates/levshell-modules/src/ideation/: config.rs  mod.rs  nudge.rs  selector.rs
crates/levshell-modules/src/interruption/: mod.rs
crates/levshell-modules/src/palette/: app_launcher.rs  calc.rs  links.rs  mod.rs  module.rs  note_search.rs  provider.rs  recent_docs.rs  ref_search.rs  unicode.rs  workspace_switcher.rs
crates/levshell-modules/src/proc_sniper/: mod.rs
crates/levshell-modules/src/remote/: gpu.rs  host.rs  jobs.rs  mod.rs  runner.rs  ssh_monitor.rs
crates/levshell-modules/src/rubber_duck/: client.rs  config.rs  mod.rs
crates/levshell-modules/src/sway/: indicator.rs  mod.rs  module.rs
crates/levshell-modules/src/telemetry/: battery.rs  cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  power_profiles.rs  upower.rs
crates/levshell-modules/src/warmup/: config.rs  mod.rs  persist.rs  trigger.rs
crates/levshell-modules/tests/: ideation.rs
crates/levshell-projects/: Cargo.toml
crates/levshell-projects/src/: config.rs  lib.rs  registry.rs
crates/levshell-projects/tests/: registry.rs
crates/levshell-sync/: Cargo.toml
crates/levshell-sync/src/: adapter.rs  engine.rs  lib.rs
crates/levshell-sync/src/ankiconnect/: client.rs  config.rs  mod.rs  types.rs
crates/levshell-sync/src/caldav/: client.rs  config.rs  mod.rs  translator.rs
crates/levshell-sync/src/mlflow/: mod.rs
crates/levshell-sync/src/obsidian/: config.rs  frontmatter.rs  links.rs  mod.rs
crates/levshell-sync/src/wandb/: mod.rs
crates/levshell-sync/src/zotero/: config.rs  mod.rs  read.rs
crates/levshell-sync/tests/: ankiconnect.rs  caldav.rs  engine.rs  obsidian.rs  zotero.rs
docs/: ui-scaling-plan.md
shell/: Theme.qml  WidgetWrapper.qml  main.qml  qmldir
shell/widgets/: AnkiDueWidget.qml  ArxivWatchPanel.qml  ArxivWatchWidget.qml  BatteryWidget.qml  ClockHub.qml  ClockWidget.qml  CommandPalette.qml  ControlCenterWidget.qml  CpuWidget.qml  DiskWidget.qml  GpuDashboard.qml  GpuFleetPanel.qml  InterruptionCostWidget.qml  LatexStatusWidget.qml  MemoryWidget.qml  NetworkWidget.qml  NotificationCenter.qml  NotificationsWidget.qml  PowerProfileWidget.qml  ProcessSniper.qml  ProjectPulsePanel.qml  ProjectPulseWidget.qml  QuickSettings.qml  ReferenceLibraryPanel.qml  ReferenceLibraryWidget.qml  RemoteJobsPanel.qml  RemoteJobsWidget.qml  RubberDuckOverlay.qml  SessionTimerWidget.qml  SettingsPanel.qml  Sparkline.qml  SshDashboard.qml  SshFleetPanel.qml  SystemTrayWidget.qml  WarmupOverlay.qml  WorkspaceIndicator.qml  qmldir
spec/: levshell-design.tex  levshell-spec.tex
