[workspace]
resolver = "2"
members = [
    "crates/levshell-core",
    "crates/levshell-data",
    "crates/levshell-ipc",
    "crates/levshell-context",
    "crates/levshell-sync",
    "crates/levshell-config",
    "crates/levshell-modules",
    "crates/levshell-daemon",
    "crates/levshell-ctl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Levi Neuwirth"]
repository = "https://github.com/levi/levshell"
homepage = "https://github.com/levi/levshell"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", default-features = false }
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Sway IPC
swayipc-async = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled", "blob", "chrono", "uuid", "serde_json"] }
rusqlite_migration = "1.2"

# Time and identity
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v7", "serde"] }

# Configuration
config = { version = "0.14", default-features = false, features = ["toml"] }
notify = "6"

# Internal crates (referenced by path so each crate inherits the workspace version)
levshell-core    = { path = "crates/levshell-core",    version = "0.1.0" }
levshell-data    = { path = "crates/levshell-data",    version = "0.1.0" }
levshell-ipc     = { path = "crates/levshell-ipc",     version = "0.1.0" }
levshell-context = { path = "crates/levshell-context", version = "0.1.0" }
levshell-sync    = { path = "crates/levshell-sync",    version = "0.1.0" }
levshell-config  = { path = "crates/levshell-config",  version = "0.1.0" }
levshell-modules = { path = "crates/levshell-modules", version = "0.1.0" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
