[workspace]
resolver = "2"
members = [
    "crates/levshell-core",
    "crates/levshell-data",
    "crates/levshell-ipc",
    "crates/levshell-context",
    "crates/levshell-sync",
    "crates/levshell-config",
    "crates/levshell-projects",
    "crates/levshell-modules",
    "crates/levshell-daemon",
    "crates/levshell-ctl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Levi Neuwirth"]
repository = "https://github.com/levi/levshell"
homepage = "https://github.com/levi/levshell"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", default-features = false }
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Sway IPC
swayipc-async = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled", "blob", "chrono", "uuid", "serde_json"] }
rusqlite_migration = "1.2"

# Time and identity
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v7", "serde"] }

# Configuration
config = { version = "0.14", default-features = false, features = ["toml"] }
notify = "6"

# Stochastic scheduling (ideation engine)
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

# Filesystem stats (disk-space telemetry). Pure-Rust raw syscalls on
# Linux — no libc/C-binding pull, matching the zbus/notify-rust choice.
rustix = { version = "0.38", default-features = false, features = ["fs"] }

# HTTP client (AnkiConnect sync adapter — localhost only, no TLS needed)
# CalDAV needs rustls-tls-native-roots for real servers over HTTPS.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }

# iCalendar (.ics) parsing for the CalDAV sync adapter
icalendar = "0.17"

# Freedesktop notifications — spec design §9 rule 3 critical-escalation
# escape hatch when a widget is hidden. `z` feature picks the
# pure-Rust zbus backend so we don't pull libdbus C bindings into the
# build.
notify-rust = { version = "4", default-features = false, features = ["z"] }

# UPower D-Bus subscription for instant AC-state changes (bypassing the
# 10s battery sysfs poll). Pinned to the version notify-rust transitively
# pulls in so we share a single zbus runtime.
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Internal crates (referenced by path so each crate inherits the workspace version)
levshell-core    = { path = "crates/levshell-core",    version = "0.1.0" }
levshell-data    = { path = "crates/levshell-data",    version = "0.1.0" }
levshell-ipc     = { path = "crates/levshell-ipc",     version = "0.1.0" }
levshell-context = { path = "crates/levshell-context", version = "0.1.0" }
levshell-sync    = { path = "crates/levshell-sync",    version = "0.1.0" }
levshell-config  = { path = "crates/levshell-config",  version = "0.1.0" }
levshell-projects = { path = "crates/levshell-projects", version = "0.1.0" }
levshell-modules = { path = "crates/levshell-modules", version = "0.1.0" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
