[package]
name = "levshell-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Levshell layered configuration loader with hot-reload via inotify."

[dependencies]
levshell-context.workspace = true
levshell-ipc.workspace = true
config.workspace = true
serde.workspace = true
toml.workspace = true
notify.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
