[package]
name = "levshell-modules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Built-in Levshell modules: workspace indicator, telemetry, notifications, command palette, and friends."

[dependencies]
levshell-core.workspace = true
levshell-data.workspace = true
levshell-config.workspace = true
levshell-context.workspace = true
levshell-ipc.workspace = true
levshell-projects.workspace = true
chrono.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures-util.workspace = true
reqwest.workspace = true
swayipc-async.workspace = true
notify-rust.workspace = true
zbus.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "macros", "process", "io-util", "net"] }
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net"] }
tempfile = "3"
