[package]
name = "levshell-projects"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Levshell project registry: loads TOML-defined projects, upserts them into the unified data store, and provides indexed lookups plus attach/detach operations for binding entities (notes, refs, tasks, etc.) to projects."

[dependencies]
levshell-core.workspace = true
levshell-data.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
toml.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
